welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: ';' expected but 'if' found.
	} if (b>=13 == true && b<=19 == true) {
          ^