welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var nbAdos:Int=o
	if (a>=13 == true && a<=19 == true) {
		 nbAdos=nbAdos+1
	} if (b>=13 == true && b<=19 == true) {
		 nbAdos=nbAdos+1
	} if (c>=13 == true && c<=19 == true) {
		 nbAdos=nbAdos+1
	} if (d>=13 == true && d<=19 == true) {
		 nbAdos=nbAdos+1
	}
}
